Fixed text overflow scrolling in user profile

--- a/frontend/src/components/cards/ProfileCard.module.css
+++ b/frontend/src/components/cards/ProfileCard.module.css
@@ -50,9 +50,11 @@
   font-size: 18px;
   color: #13252e;
   line-height: 1.2;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  overflow-x: auto;
   white-space: nowrap;
+  /* text-overflow: ellipsis; */
+  /* overflow: hidden;
+  white-space: nowrap; */
 }
 
 .profileDetailButtonContainer {
@@ -108,6 +110,7 @@
 
   .editProfileButton {
     font-size: 16px;
+    border-radius: 13px;
     padding: 6px 40px;
   }
 }
@@ -136,6 +139,7 @@
 
   .editProfileButton {
     font-size: 14px;
+    border-radius: 11px;
     padding: 5px 35px;
   }
 }
